--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
   push:
     branches:
       - master
+      
+permissions:
+  contents: write
+
 jobs: # 工作流
   build:
     runs-on: ubuntu-latest #运行在虚拟机环境ubuntu-latest
