--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "joooooo",
   "license": "ISC",
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.72"
+    "vitepress": "1.0.0-alpha.72"
+  },
+  "dependencies": {
+    "gitalk": "1.8.0"
   }
 }
